<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_AxisIn" Id="{60636e77-6521-43fa-bcca-bcb9fff40601}">
    <Declaration><![CDATA[TYPE ST_AxisIn :
STRUCT
	bEnable		: BOOL;
	fOverride	: LREAL;
	bManuelFw	: BOOL;
	bManuelBw	: BOOL;
	fVelocity	: LREAL;
	bMoveAbs	: BOOL;
	fPosition	: LREAL;
	bStop		:BOOL;
	bReset		:BOOL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>